# voxedge

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  brain.json  fly.chat.toml  fly.full.toml  fly.toml  manifest.json  pyproject.toml
data/corpus/: civic_info.txt
deploy/docker/: Dockerfile.aya  Dockerfile.cuda  Dockerfile.gemma
deploy/fly/: fly.chat.toml  fly.full.toml
deploy/k8s/: README.md  deployment-aya.yaml  deployment-gemma-cuda.yaml  deployment-gemma.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml  traefik-config.yaml
docs/: architecture.md  gpu-profile-lessons.md  gpu-profile.md
docs/superpowers/specs/: 2026-04-02-swappable-model-profiles-design.md
examples/corpus/: farming_guide.txt  health_basics.txt
src/: chunker.py  config.py  embedder.py  generator.py  ingest.py  main.py  parser.py  profiles.py  query.py  reranker.py  store.py
tests/: conftest.py  test_api.py  test_build_factory.py  test_chunker.py  test_e2e.py  test_embedder.py  test_generator.py  test_ingest.py  test_integration.py  test_parser.py  test_profiles.py  test_query.py  test_store.py
