[project]
name = "voxedge"
version = "0.7.0"
description = "Multilingual AI that runs anywhere, without internet"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
keywords = ["rag", "edge", "offline", "multilingual", "qdrant", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "fastembed>=0.4.0",
    "qdrant-edge-py>=0.6.0",
    "llama-cpp-python>=0.3.20",
    "liteparse>=1.2.0",
    "langdetect>=1.0.9",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
